--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "react": "18.2.0",
+    "axios": "^1.5.1",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.13.1",
+    "react": "18.2.0",
+    "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-vector-icons": "^10.0.0",
+    "teaset": "^0.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +38,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
