--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-community/cli-doctor": "^11.3.8",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -17,14 +19,20 @@
     "axios": "^1.5.1",
     "mobx": "^6.10.2",
     "mobx-react": "^9.0.1",
-    "react-native": "0.72.4",
     "react": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-amap-geolocation": "^1.2.3",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker": "^4.3.7",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^10.0.0",
     "teaset": "^0.7.5"
   },
@@ -42,6 +50,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
