--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-amap-geolocation": "^1.2.3",
+    "react-native-cli": "1.3.0",
+    "react-native-common-date-picker": "^2.3.9",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
